--- a/slider/owl.custom.css
+++ b/slider/owl.custom.css
@@ -1,38 +1,57 @@
+
 .owl-item .item .item_content {
 	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
+    	top: 25%;
+    	left: 0;
+    	right: 0;
+    	text-align: center;
+    	padding: 0 15%;
+   	opacity: 0;	
+    	-webkit-transition: all .5s ease;
+    	-moz-transition: all .5s ease;
+    	transition: all .5s ease;	
+	
+}
+
+.owl-item.active .item .item_content  {
+    	opacity: 1;
 }
 
 .owl-nav>div {
-	display: block;
-	width: 36px;
-	height: 60px;
-	line-height: 1 !important;
-	margin: -30px 0 0;
-	padding: 22px 12px;
-	position: absolute;
-	top: 40%;
-	z-index: 2;
-	overflow: hidden;
-	opacity: 0;
-	cursor: pointer;
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	transition: all .3s ease;
-	background: #000;
-	color: #fff;
-	box-shadow: none !important;
-	border-radius: 0 !important;
+    	display: block;
+    	width: 36px;
+    	height: 60px;
+    	line-height: 1 !important;
+    	margin: -30px 0 0;
+    	position: absolute;
+    	top: 50%;
+    	z-index: 2;
+    	overflow: hidden;
+    	opacity: 0;
+    	cursor: pointer;
+    	-webkit-transition: all .3s ease;
+    	-moz-transition: all .3s ease;
+    	transition: all .3s ease;
+    	background: #000;
+    	color: #fff;
+    	box-shadow: none !important;
+    	background-color: #b49543;
+    	padding: 22px 12px;
+    	cursor: pointer;
+    	cursor: hand;
+    	-webkit-user-select: none;
+    	-khtml-user-select: none;
+    	-moz-user-select: none;
+    	-ms-user-select: none;
+ 	user-select: none;	
 }
 
 .owl-carousel .owl-nav .owl-prev:before {
 	font-family: dashicons;
 	content: "\f341";
-	font-size: 12px;
-	line-height: 5 !important;
-	text-align: center;
+	font-size: 18px;
+	line-height: 1 !important;
+	margin-left: -4px;
 }
 .owl-nav .owl-prev {
 	left: 35px;
@@ -45,9 +64,9 @@
 .owl-carousel .owl-nav .owl-next:before {
 	font-family: dashicons;
 	content: "\f345";
-	font-size: 12px;
-	line-height: 5 !important;
-	text-align: center;
+	font-size: 18px;
+	line-height: 1 !important;
+	margin-left: -2px;
 }
 .owl-nav .owl-next {
 	right: 35px;
@@ -55,4 +74,51 @@
 .owl-carousel:hover .owl-nav .owl-next {
 	opacity: 1;
 	right: 25px;
+}
+.owl_full_item h3{
+    	font-family: Montserrat;
+    	line-height: 55px;
+    	font-weight: 500;
+    	font-style: normal;
+    	color: #fff;
+    	font-size: 45px;
+    	opacity: 1;
+    	visibility: visible;
+    	-webkit-transition: opacity 0.24s ease-in-out;
+    	-moz-transition: opacity 0.24s ease-in-out;
+    	transition: opacity 0.24s ease-in-out;
+}
+
+.owl-carousel .owl-item img{
+	opacity: 0.5;
+}
+
+.imgwrap{
+	background-color: #111111;	
+}
+
+.item_content .entry-meta a{
+	color: #fff;
+	opacity: .6;
+}
+
+.item_content .entry-meta a:hover{
+	color: #fff;
+	opacity: 1;
+}
+
+.item_content .read-more{
+	background: transparent;
+	color: #fff;
+}
+
+.item_content .read-more:hover{
+	color: #b49543;
+}
+
+@media (max-width: 870px) {
+	.owl_full_item h3{
+		font-size: 5vw !important;
+		line-height: 1.1 !important;
+	}
 }
